--- a/index.html
+++ b/index.html
@@ -248,9 +248,9 @@
                     <div class="register-controls ">
                         <div class="register-input col-12">
                             <input type="text" placeholder="Enter your email" class="effect-9">
-                            <span class="focus-border">
+                            <div class="focus-border">
                                 <i></i>
-                            </span>
+                            </div>
                         </div>
                          
                         <button class="btn">
@@ -312,7 +312,7 @@
         <!-- End Content -->
     
         <!-- Begin Footer -->
-        <footer class="footer" data-aos="zoom-in">
+        <footer class="footer" data-aos="fade-right">
             <div class="container">
                 <div class="footer-inner">
                     <div class="footer-content">
@@ -324,7 +324,7 @@
 
                         <div class="footer-info">
                             <div class="row">
-                                <div class="col-lg-3">
+                                <div class="col-lg-3 col-md-3 col-sm-3">
                                     <div class="info-content">
                                         <a href="javascript:;">Features</a>
                                         <a href="javascript:;">Pricing</a>
@@ -332,7 +332,7 @@
                                         <a href="javascript:;">Partners</a>
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-lg-3 col-md-3 col-sm-3">
                                     <div class="info-content">
                                         <a href="javascript:;">About Us</a>
                                         <a href="javascript:;">Tutorials</a>
@@ -342,7 +342,7 @@
                                         <a href="javascript:;">Case Studies</a>
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-lg-3 col-md-3 col-sm-3">
                                     <div class="info-content">
                                         <a href="javascript:;">Medium</a>
                                         <a href="javascript:;">Twitter</a>
@@ -351,7 +351,7 @@
                                         <a href="javascript:;">LinkedIn</a>
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-lg-3 col-md-3 col-sm-3">
                                     <div class="info-content">
                                         <a href="javascript:;">Contact Us</a>
                                         <a href="javascript:;">Slack</a>
