--- a/index.html
+++ b/index.html
@@ -423,9 +423,9 @@
     <!-- Initialize Swiper -->
     <script>
       var swiper = new Swiper(".mySwiper", {
-        // autoplay: {
-        //     delay: 6000,
-        // },
+        autoplay: {
+            delay: 6000,
+        },
 
         cssMode: true,
         navigation: {
