--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet"href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
 
     <!-- Link SCSS Custom -->
-    <link rel="stylesheet" href="./lib/scss/style.css">
-    <link rel="stylesheet" href="./lib/scss/reponsive.css">
+    <link rel="stylesheet" href="./lib/css/style.css">
+    <link rel="stylesheet" href="./lib/css/reponsive.css">
     
 </head>
 <body>
